feat: hero: done

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <h1 class="hero__title"><span>Лидогенерация</span> для бизнеса</h1>
             <div class="hero__desc">
               <p class="hero__desc-text">
-                Покупайте только целевые лиды по фиксированной цене от 300 ₽
+                Покупайте только целевые лиды по фиксированной цене от 300&nbsp;₽
               </p>
               <img
                 class="hero__desc-icon"
