--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class="body">
     <header class="header">
       <div class="container header__container">
-        <a class="header__link" href="/">
+        <a class="header__link" href="/test-task">
           <img
             class="header__logo"
             src="./images/header-logo.svg"
